# blockrunners

./: Anchor.toml  README.md
.github/workflows/: anchor-ci.yml  anchor-test-local.yml  anchor-test.yml  deploy.yaml  setup-anchor.yml  test.yml
app/: .env.devnet  .env.localnet  .env.mainnet-beta  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  wallet.css
programs/blockrunners/: Cargo.toml
programs/blockrunners/src/: constants.rs  errors.rs  lib.rs
programs/blockrunners/src/instructions/: claim_prize.rs  collect_player_card.rs  debug_give_card.rs  emit_social_feed_event.rs  generate_next_direction_for_path.rs  generate_player_path.rs  get_game_state.rs  get_player_state.rs  get_social_feed.rs  initialize_game.rs  initialize_player.rs  initialize_social_feed.rs  join_game.rs  make_move.rs  mod.rs  move_commit.rs  move_reveal.rs  purchase_ciphers.rs  save_and_emit_event.rs  temp_rand_request.rs  temp_rand_reveal.rs  test_set_players_position.rs  update_last_login.rs
programs/blockrunners/src/state/: game_state.rs  mod.rs  player_path.rs  player_state.rs  social_feed.rs  social_feed_event.rs
programs/blockrunners/src/utils/: achievement_tracker.rs  get_move_cost.rs  give_cards.rs  give_random_cards.rs  mod.rs  randomness_request.rs  randomness_reveal.rs  randomness_use.rs  save_and_emit_event.rs  transfer.rs
tests/: blockrunners.ts  get_game_info.ts  initialize_game.ts  initialize_player.ts  join_game.ts  make_move.ts  move.ts  purchase_ciphers.ts
tests/helpers/: constants.ts  (+1 more)
(+58 files in other folders)
