[package]
name = "blockrunners"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blockrunners"

[features]
default = []
test = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
strum = "0.27"
strum_macros = "0.27"
session-keys = { version = "2.0.6", features = ["no-entrypoint"] },
proc-macro2 = "=1.0.93"
